--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack serve",
     "test": "eslint src",
-    "build": "npm run clean; NODE_ENV=production webpack --color",
+    "build": "npm run clean; NODE_ENV=production webpack --color; cp -f _redirects dist/",
     "winbuild": "npm run clean & SET NODE_ENV=production& webpack --color",
     "clean": "rimraf dist"
   },
